crates/eure-macros/tests/compile_fail/default_and_flatten_conflict.rs
use eure::FromEure;

#[derive(FromEure)]
struct Test {
    #[eure(default, flatten)]
    field: String,
}

fn main() {}
